manifest/simple-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web
spec:
  selector:
    app: simple-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web
spec:
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
      - name: simple-web
        image: simple-website:latest
        imagePullPolicy: Never # Local image only
        ports:
          - containerPort: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: simple-web-route
# spec:
#   parentRefs:
#   - name: web-gateway
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#       - name: simple-web
#         port: 80
#     filters:
#       # Pomerium policy to use
#       - type: ExtensionRef
#         extensionRef:
#             group: gateway.pomerium.io
#             kind: PolicyFilter
#             name: allow-all-test
