manifest/web-terminal.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-terminal
spec:
  selector:
    app: web-terminal
  ports:
    - name: http
      port: 80
      targetPort: 7681
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-terminal
spec:
  selector:
    matchLabels:
      app: web-terminal
  template:
    metadata:
      labels:
        app: web-terminal
    spec:
      containers:
      - name: web-terminal
        image: ttyd:latest
        imagePullPolicy: Never # Local image only
        env:
        - name: USERNAME
          value: user
        - name: PASSWORD
          value: password
        - name: AUTOLOGIN
          value: "true"
        - name: SUDO_OK
          value: "true"
        ports:
          - containerPort: 7681
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-term-route
spec:
  parentRefs:
  - name: web-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /term
    # filters:
    # - type: URLRewrite
    #   urlRewrite:
    #     path:
    #       type: ReplacePrefixMatch
    #       replacePrefixMatch: /
    backendRefs:
    - name: web-terminal
      port: 80
